[metadata]
name = manifold
author = Ignacio Martin Vizzo (aka Nacho), Cyrill Stachniss and Jingwei Huang.
author_email = ignaciovizzo@gmail.com
license_files = LICENSE.txt
description = Python bindings to convert triangular meshes to manifold meshes
long_description = file:README.md
long_description_content_type = text/markdown
version = 0.1

[options]
packages = find:
install_requires = numpy
